feedhq/feeds/static/feeds/css/partials/_320.scss
@media only screen and (max-width: 767px) {
	::-webkit-scrollbar {
		width: 9px;
		height: 9px;
	}

	::-webkit-scrollbar-track {
		border-radius: 10px;
		background: rgba(0, 0, 0, 0.05);
	}

	::-webkit-scrollbar-thumb {
		border-radius: 10px;
		background: rgba(0, 0, 0, 0.1);
	}

	#header {
		@include grid(4);
		padding: 0;
		position: relative;

		h1, #navigation {
			@include cols(4);
			margin: 0;
		}

		#navigation {
			font-size: 0.8em;
			position: absolute;
			top: 8px;
			right: 0;

			background: lighten($text, 80%);
			& > span {
				display: inline;
				position: absolute;
				top: -1px;
				right: 3.5px;
			}

			&:hover, &.active {
				background: $text;
				color: white;
			}
		}

		#add-menu {
			position: relative;
			background: lighten($text, 80%);
			margin-right: 32px;

			&:hover, &.active {
				background: $text;
				color: white;
			}

			& > span {
				display: inline;
				position: absolute;
				top: -1px;
				right: 3.5px;
			}
		}

		#add-menu {
			margin-top: 1px;
		}

		#navigation {
			margin-top: 3px;
		}

		#add-menu, #navigation {
			display: block !important;
			float: right;
			width: 24px;
			height: 24px;
			border-radius: 3px;

			&:hover, &.active {
				background-color: $text;
				color: white;
			}

			li {
				display: none !important;
			}
		}
	}

	#footer, #content, #categories, #options {
		@include grid(4);
		padding: 0;
	}

	.pagination {
		font-size: 0.9em;
		a {
			padding-top: 2px;
			padding-bottom: 2px;
		}
	}

	.figures {
		.count {
			width: 100%;
			margin: 0;
			white-space: inherit;
			float: none;

			input {
				font-size: 0.8rem;
			}
		}
	}

	form {
		margin: 0;
		margin-top: 1em;

		.field, .title, .input, .submit {
			width: 100%;
			margin: 0;
			text-align: left;
		}

		.input input {
			&[type="text"], &[type="password"] {
				width: 94%;
			}
			&[type="checkbox"] {
				width: auto;
			}
		}
	}

	.entry {
		.title {
			width: column-width(4) - 20;
			white-space: inherit;
		}

		.date {
			margin: 0;
			width: 100%;
			font-size: 0.8em;
			text-align: right;
			border-bottom: 1px solid lighten($text, 75%);
		}
	}

	#entry {
		width: 100%;
		padding: 0;

		.actions, .content {
			width: 100%;
			margin: 0;

			input {
				font-size: 20px;
				padding: 0 3px;
			}
		}

		> h2 {
			margin-top: 0.25em;
			font-size: 1.3em;
			font-weight: bold;
		}
	}

	.overflow {
		-webkit-overflow-scrolling: touch;
		overflow: scroll;
	}

	.content {
		pre, img {
			overflow: auto;
			-webkit-overflow-scrolling: touch;
		}

		ul, ol {
			margin-left: 1.5em !important;
		}
	}
}

